--- a/templates/base.html
+++ b/templates/base.html
@@ -105,6 +105,6 @@
     <script src="/static/blog/js/jquery.min.js"></script>
     <script src="/static/blog/js/bootstrap.min.js "></script>
     <script src="/static/blog/js/auto_active.js"></script>
-    {% include 'custom_tongji.html' %}
+    {% include 'custom/tongji.html' %}
 </body></html>
 
