--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
     <br><br><br>
     <div id="footer">
       <div class="container">
-          <p class="muted credit" align='center'><a href='/sitemap.xml'>Sitemap</a> | Copyright © <a href="/">JackeyGao</a>[<a href="/admin/">Admin</a>]</p>
+          <p class="muted credit" align='center'><a href='/sitemap.xml'>Sitemap</a> | Copyright © 2014<a href="/">JackeyGao</a>[<a href="/admin/">Admin</a>]</p>
       </div>
     </div>
     <!-- javascript -->
