--- a/templates/tags.html
+++ b/templates/tags.html
@@ -6,7 +6,7 @@ Tags
 {% endblock %}
 
 {% block content %}
-    <h5 id="tags">Tags</h5>
+ <h3 contenteditable="false">标签</h3>
   <section class="group-tags">
   <ul class="tag-box">
     {% for tag,count in tags_items  %}
